# saver

./: .coveragerc  .gitignore  README.md  config.yaml  hello.py  pyproject.toml  pytest.ini
config/: config.yaml.example
data/: captures.db
src/saver/: app_monitor.py  cli.py  key_listener.py  main.py  storage_handler.py
src/saver/core/: __init__.py  buffer_manager.py  capture.py  config.py
src/saver/monitors/: __init__.py  app_monitor.py
src/saver/storage/: __init__.py  models.py  sqlite_handler.py
src/saver/utils/: __init__.py  platform.py
tests/: conftest.py
tests/unit/: test_cli.py  test_interactive_cli.py
tests/unit/core/: test_buffer_manager.py  test_capture.py  test_config.py
tests/unit/monitors/: test_app_monitor.py  test_key_listener.py
tests/unit/storage/: test_fuzzy_search.py  test_models.py  test_sqlite_handler.py
tests/unit/utils/: test_platform.py
